Remove FCM message references
